--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="s">S</div>
       </div>
       <div class="home">Home</div>
-      <a href="/projects.html">
+      <a href="https://nand1tha.github.io/webpage/projects.html">
       <div class="projects">Projects</div>
       </a>
       <a href="/resume.html">
