--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
         <div class="n">N</div>
         <div class="s">S</div>
       </div>
-      <a href="https://nand1tha.github.io/index.html">
+      <a href="https://nand1tha.github.io/webpage/index.html">
         <div class="home">Home</div>
       </a>
       <div class="projects">Projects</div>
