--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="https://nand1tha.github.io/webpage/projects.html">
       <div class="projects">Projects</div>
       </a>
-      <a href="https://nand1tha.github.io/resume.html">
+      <a href="https://nand1tha.github.io/webpage/resume.html">
       <div class="resume">Resume</div>
     </a>
     </div>
