--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
         <div class="home">Home</div>
       </a>
       <div class="projects">Projects</div>
-      <a href="https://nand1tha.github.io/resume.html">
+      <a href="https://nand1tha.github.io/webpage/resume.html">
       <div class="resume">Resume</div>
       </a>
     </div>
